[package]
name = "sgantt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assertables = "7.0.1"
chrono = "0.4.26"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
svg = { path = "E:/code/svg" }
time = { version = "0.3.22", features = ["serde", "serde-human-readable", "serde-well-known", "macros"] }
